fixed wrapping of book titles

--- a/client/src/components/Shelf.scss
+++ b/client/src/components/Shelf.scss
@@ -1,8 +1,10 @@
 .book-card {
-  width: 30%;
+  width: 20%;
+  margin: 1rem;
 }
 
 .container {
+  padding-top: 2em;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -22,7 +24,7 @@
 }
 
 .award-image {
-  width: 20%;
+  width: 30%;
 }
 .award-card {
   width: fit-content !important;
@@ -30,4 +32,15 @@
 
 .search-books-bar {
   display: inline;
+}
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.book-cover {
+  height: 300px;
 }
